# clion-opencv-tutorials3

./: .gitignore  CMakeLists.txt  README.md  loadDisplaySave.cpp  logo.cpp  main.cpp  mat.cpp
collect/: blobs.cpp  contours.cpp  edgedetector.h  linefinder.h
color/: colorDetection.cpp  colordetector.cpp  colordetector.h  extractObject.cpp
detection/: harrisDetector.h  interestPoints.cpp
example/: detectObjects.cpp  recognizeFace.cpp  trainSVM.cpp
filter/: derivatives.cpp  filters.cpp  laplacianZC.h
histogram/: colorhistogram.h  contentFinder.cpp  contentFinder.h  finder.cpp  histograms.cpp  imageComparator.h  integral.cpp  integral.h  retrieve.cpp  tracking.cpp
match/: binaryDescriptors.cpp  matcher.cpp  patches.cpp
morphology/: morphology.cpp  mserFeatures.cpp  segment.cpp  watershedSegmentation.h
pixel/: colorReduce.cpp  contrast.cpp  remapping.cpp  saltImage.cpp
shadow/: estimateF.cpp  estimateH.cpp  matchingTarget.cpp  robustMatcher.h  robustmatching.cpp  targetMatcher.h
threeDimensional/: CameraCalibrator.cpp  CameraCalibrator.h  calibrate.cpp  cameraPose.cpp  estimateE.cpp  robustMatcher.h  stereoMatcher.cpp  triangulate.cpp
tracking/: flow.cpp  oTracker.cpp  tracker.cpp  videoprocessor.h  visualTracker.h
videoProcess/: BGFGSegmentor.h  featuretracker.h  foreground.cpp  tracking.cpp  videoprocessing.cpp
